Spacing resolved in work section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ h1 {
 
 /* Set font size of h2 headings to be larger than the default */
 h2 {
-    font-size: 35px;
+    font-size: 40px;
 }
 
 /* Navigation items */
@@ -108,26 +108,32 @@ nav a:active {
 
 /* Work section */
 
-.work-container {
+#work-container {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 
-  aside {
-    flex: 1;
+#work-header {
     padding: 30px;
     text-align: center;
 }
 
 .work-sections {
-    flex: 4;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     align-items: flex-start;
+    justify-content: space-between;
   }
 
 /* Individual cards layout and styling */
+
+.work-card {
+    background: whitesmoke;
+    padding: 80px;
+    border: 10px;
+    box-shadow: 10px 10px 10px #aaaaaa;
+    min-width: 40%;
+}
 
 .work-card h3 {
     background-image: linear-gradient(to right, var(--dark-color), var(--medium-color));
@@ -139,17 +145,8 @@ nav a:active {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.work-card {
-    background: whitesmoke;
-    padding: 80px;
-    /* border: 10px; */
-    box-shadow: 10px 10px 10px #aaaaaa;
-    flex-basis: 0;
-}
-
 .work-card:nth-of-type(1) {
     width: 100%;
-    flex-grow: 2;
 }
 
 /* Actions on work cards */
@@ -171,6 +168,10 @@ nav a:active {
 /* Footer */
 footer {
     background: var(--dark-color);
+    flex: 0 0 50px;
+    width: 100%;
+    position: relative;
+    bottom: 0;
     padding: 20px;
     text-align: center;
     font-family: caveat;
@@ -182,10 +183,11 @@ footer a {
     align-content: center;
     padding: 20px;
     font-size: 200%;
+    
 }
 
 @media screen and (max-width: 992px) {
-    header, #about-me-container, .work-container {
+    header, #about-me-container, #work-container {
       flex-direction: column;
     }
 
@@ -198,4 +200,5 @@ footer a {
         font-size: 180%;
         padding-top: 20px;
     }
+
 }
